# Meeting-Minutes-AI

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
prompts/: prompts.py
services/: export.py  llm.py  process.py  transcription.py
utils/: config.py
